feat: 1. Что такое Mock-объект. [#504866]